2002-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-dirlist-cgi): Treat a local cookie.

2002-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-x-face-alist): New.

2002-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): Change default value and type of
	custom.
	(w3m-favicon-type-alist): New internal variable.
	(w3m-setup-favicon): Don't check 'xpm.
	(w3m-buffer-favicon): Decide image type of Emacs use
	`w3m-favicon-type-alist'.

2002-12-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Add url
	for "internet" and "pc".
	(shimbun-index-url): Treat 4th element of
	`shimbun-impress-groups-alist' as index url.
	(shimbun-get-headers): Use `shimbun-expand-url'.

2002-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-type): Suppert `stable version notation' of
	w3m-m17n.

2002-12-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-use-favicon): Moved from w3m-e21.el.

	* w3m-image.el (w3m-favicon-usable-p): Moved from w3m-e21.el.

	* w3m-e21.el : Bind `w3m-use-favicon' when compiling.
	(w3m-favicon-usable-p): Moved to w3m-image.el.
	(w3m-use-favicon): Moved to w3m.el.

2002-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-get-headers): Remove garbages.

2002-12-08  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-date-regexp): Modify
	regexp.
	(shimbun-palmfan-news-headers): Pick up MONTH, DAY and YEAR
	properly.

2002-12-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-quickml.el (shimbun-quickml-groups): Added some groups.

	* w3m-form.el (w3m-form-text-chop): Added nil check.

2002-12-07  YAMASHITA Junji  <ysjj@unixuser.org>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Follow the change
	of date format.

2002-12-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-what-where): Don't say [-ja] especially.
